--- a/blogs.css
+++ b/blogs.css
@@ -1,14 +1,15 @@
-body {
-    margin: 0;
-    padding: 0;
+* {
     background-color: antiquewhite;
+    font-family: 'Dangrek', cursive;
+    margin: 0;
+    padding-inline-start: 0;
 }
 
 .center {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: row;
+    justify-content: center;
+    font-size: large;
 }
 
 .gap {
@@ -18,15 +19,11 @@ body {
 }
 
 .center a {
-    font-family: 'Dangrek', cursive;
     text-decoration: none;
-    font-size: 1.1em;
     color: #bdc3c7;
-    padding-bottom: 10px;
     border-bottom: 5px solid #ecf0f1;
     border-color: transparent;
-    transition: all 0.5s;
-
+    transition: all 0.4s;
 }
 
 .center a:hover {
@@ -34,25 +31,19 @@ body {
     border-bottom: 5px solid #2c3e50;
 }
 
-.center .about {
+.center .blogs {
     color: #2c3e50;
     border-bottom: 5px solid #2c3e50;
     padding-bottom: 10px;
 }
 
-.center-cul {
+.center-blogs {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.center-cul .heading {
+.article {
     width: 70%;
-    font-family: 'Dangrek', cursive;
-}
-
-.center-cul .paragraph {
-    width: 70%;
-    font-family: 'Dangrek', cursive;
 }
